Reorganizing the network handling structure

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -34,13 +34,15 @@
  {emqtt, [
     {auth, {anonymous, []}}, %internal, anonymous
     {listeners, [
-		{1883,  [
+		{1883, tcp, [
 			binary,
 			{packet,        raw},
 			{reuseaddr,     true},
 			{backlog,       128},
 			{nodelay,       true}
-		]}
+		]},
+		{1884, ssh, []}
+		
 	]}
  ]}
 ].
