--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 {deps_dir, ["lib"]}.
 
 {deps, [
-	{lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "master"}}},
+	{lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
 	{elog, ".*", {git, "git://github.com/erylee/elog.git", {branch, "master"}}},
 	{folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}}
 ]}.
