TCP Socket implemented, but error on tcp_closed and SSH Socket subsystem implemented, needs the supervisors now

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -39,7 +39,8 @@
 			{packet,        raw},
 			{reuseaddr,     true},
 			{backlog,       128},
-			{nodelay,       true}
+			{nodelay,       true},
+			{active, 	false}
 		]}
 		
 	]}
