Integrated SSH as a connection option, the daemon is starting but no tests were done so far

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -41,7 +41,11 @@
 			{backlog,       128},
 			{nodelay,       true},
 			{active, 	false}
-		]}
+		]},
+		{1884, ssh, [
+			{auth_methods,"publickey"}, 
+			{system_dir, "/home/alvaro/devel/emqtt/server_key/server_key"}, 
+			{key_cb, emqtt_ssh_server_key_mgr}]}
 		
 	]}
  ]}
