--- a/rebar.config
+++ b/rebar.config
@@ -14,5 +14,5 @@
 {deps, [
 	{lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "2.0.3"}}},
 	{elog, ".*", {git, "git://github.com/erylee/elog.git", {branch, "master"}}},
-	{folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}}
+	{folsom, ".*", {git, "git://github.com/boundary/folsom.git", {branch, "master"}}},	 {gproc, ".*", {git, "git://github.com/esl/gproc.git", {tag, "0.3"}}}
 ]}.
