Some adjustments for the SSH socket

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -44,8 +44,9 @@
 		]},
 		{1884, ssh, [
 			{auth_methods,"publickey"}, 
-			{system_dir, "/home/alvaro/devel/emqtt/server_key/server_key"}, 
-			{key_cb, emqtt_ssh_server_key_mgr}]}
+			{system_dir, "/home/alvaro/devel/emqtt/server_key"}, 
+			{key_cb, emqtt_ssh_server_key_mgr},
+			{nodelay, true}]}
 		
 	]}
  ]}
